Index and about page

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,10 @@
     <!-- CSS -->
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <link href="css/about.css" rel="stylesheet">
 
     <!-- END OF CSS -->
 
@@ -55,6 +58,7 @@
 
     <!-- controller -->
     <script src="js/controller/index.js"></script>
+    <script src="js/controller/about.js"></script>
 
     <!-- service -->
 
