Developing audio and case 1

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link href="css/about.css" rel="stylesheet">
+    <link href="css/category.css" rel="stylesheet">
+    <link href="css/identityTheft.css" rel="stylesheet">
 
     <!-- END OF CSS -->
 
@@ -59,8 +61,11 @@
     <!-- controller -->
     <script src="js/controller/index.js"></script>
     <script src="js/controller/about.js"></script>
+    <script src="js/controller/category.js"></script>
+    <script src="js/controller/identityTheft.js"></script>
 
     <!-- service -->
+    <script src="js/service/nativeAudio.js"></script>
 
     <!-- directive -->
 
