Added popover service

--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,7 @@
 
     <!-- service -->
     <script src="js/service/nativeAudio.js"></script>
+    <script src="js/service/popover.js"></script>
 
     <!-- directive -->
 
