--- a/www/index.html
+++ b/www/index.html
@@ -70,6 +70,9 @@
 
     <!-- directive -->
 
+    <!-- data -->
+    <script src="js/data/identityTheft.js"></script>
+
     <!-- END OF JAVASCRIPTS -->
 
   </head>
